welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit == true){
  ^Program:16: error: reassignment to val
  if (chercheBiscuit =true)
                     ^Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
  if (chercheBiscuit =true)
  ^Program:29: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return(false)}
           ^Program:29: warning: enclosing method chercheBiscuit has result type Unit: return value discarded
    return(false)}
    ^Program:31: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  	return(true)
               ^Program:31: warning: enclosing method chercheBiscuit has result type Unit: return value discarded
  	return(true)
        ^